@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.24331 2024/04/17 13:29:39 wiz Exp $
+$NetBSD: TODO,v 1.24332 2024/04/17 13:33:46 wiz Exp $
 
 Suggested new packages
 ======================
@@ -430,6 +430,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o amanda-3.5.2
 	o amavis-perl-0.3.12 [called just amavis]
 	o ampache-4.2.5
+	o amtterm-1.7.1
 	o antiright-8.6
 	o ap-Embperl-1.3.6
 	o ap-auth-mellon-0.14.2
