@@ -1,55 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 18:24:44 joerg Exp $
-bin/ACE
-bin/gshterm
-bin/gtkshell
-man/man1/ACE.1
-man/man1/gshterm.1
-man/man1/gtkshell.1
-man/man5/system.antiright.5
-share/ACE-desktop/ACE_Panel.gdl
-share/ACE-desktop/Administration_Panel.gdl
-share/ACE-desktop/Clock.gdl
-share/ACE-desktop/Editor.gdl
-share/ACE-desktop/File_Manager.gdl
-share/ACE-desktop/File_System_Panel.gdl
-share/ACE-desktop/Horizontal_Deskbar.gdl
-share/ACE-desktop/IDE.gdl
-share/ACE-desktop/Manual_Browser.gdl
-share/ACE-desktop/Monitoring_Panel.gdl
-share/ACE-desktop/Network_Panel.gdl
-share/ACE-desktop/Old_Deskbar.gdl
-share/ACE-desktop/Publishing_Panel.gdl
-share/ACE-desktop/icons/ACE.png
-share/ACE-desktop/icons/ACE_32.png
-share/ACE-desktop/icons/Browser.png
-share/ACE-desktop/icons/Browser_32.png
-share/ACE-desktop/icons/Calculator.png
-share/ACE-desktop/icons/Calculator_32.png
-share/ACE-desktop/icons/Deck.png
-share/ACE-desktop/icons/Deck_32.png
-share/ACE-desktop/icons/File_Manager.png
-share/ACE-desktop/icons/File_Manager_32.png
-share/ACE-desktop/icons/File_Sharing.png
-share/ACE-desktop/icons/File_Sharing_32.png
-share/ACE-desktop/icons/Image_Editor.png
-share/ACE-desktop/icons/Image_Editor_32.png
-share/ACE-desktop/icons/Lock_Display.png
-share/ACE-desktop/icons/Lock_Display_32.png
-share/ACE-desktop/icons/Screen.png
-share/ACE-desktop/icons/Screen_32.png
-share/ACE-desktop/icons/Sticky_Note.png
-share/ACE-desktop/icons/Sticky_Note_32.png
-share/ACE-desktop/icons/System_Monitor.png
-share/ACE-desktop/icons/System_Monitor_32.png
-share/ACE-desktop/icons/Terminal.png
-share/ACE-desktop/icons/Terminal_32.png
-share/ACE-desktop/icons/Text_Editor.png
-share/ACE-desktop/icons/Text_Editor_32.png
-share/ACE-desktop/icons/Word_Processor.png
-share/ACE-desktop/icons/Word_Processor_32.png
-share/ACE-desktop/system.antiright
-share/doc/antiright/AUTHORS
-share/doc/antiright/COPYING
-share/doc/antiright/INSTALL
-share/doc/antiright/README
-share/doc/antiright/TODO
