@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2531 2024/04/17 13:29:39 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2532 2024/04/17 13:33:46 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4186,3 +4186,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated databases/py-peewee to 3.17.2 [adam 2024-04-17]
 	Updated net/py-zeroconf to 0.132.2 [adam 2024-04-17]
 	Removed graphics/denemo [wiz 2024-04-17]
+	Removed x11/antiright [wiz 2024-04-17]
